# protocol-cwcom

./: .gitignore  CHANGELOG.md  README.md  TODO.md
.github/workflows/: release_to_pypi.yml
c/: README.md  cwprotocol.c  cwprotocol.h
c/chatgpt_doc/: README.md  doc1.md  doc2.md  doc3.md  doc4.md  doc5.md  doc6.md  doc7.md  doc8.md  doxy.h
python/: README.md  TODO.md
python/cwcom/: README.md  pyproject.toml
