[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwcom"
version = "0.0.1"
authors = [
  { name="Dr. Gerolf Ziegenhain", email="gerolf.ziegenhain@gmail.com" },
]
description = "CW Communication Morse Code Protocol"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Morse-Code-over-IP/"
"Bug Tracker" = "https://github.com/Morse-Code-over-IP/"